--- a/2043Project/src/UI.form
+++ b/2043Project/src/UI.form
@@ -216,6 +216,9 @@
       </Layout>
       <SubComponents>
         <Container class="javax.swing.JScrollPane" name="jScrollPane4">
+          <Properties>
+            <Property name="requestFocusEnabled" type="boolean" value="false"/>
+          </Properties>
           <AuxValues>
             <AuxValue name="autoScrollPane" type="java.lang.Boolean" value="true"/>
           </AuxValues>
@@ -225,7 +228,8 @@
             <Component class="javax.swing.JTextArea" name="jTextArea4">
               <Properties>
                 <Property name="columns" type="int" value="20"/>
-                <Property name="rows" type="int" value="5"/>
+                <Property name="rows" type="int" value="4"/>
+                <Property name="tabSize" type="int" value="5"/>
                 <Property name="text" type="java.lang.String" value="Reccomendations:&#xa;Link&#xa;Link&#xa;Link"/>
               </Properties>
             </Component>
