--- a/2043Project/src/UI.form
+++ b/2043Project/src/UI.form
@@ -182,7 +182,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel3">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Question"/>
+            <Property name="text" type="java.lang.String" value="Question 1"/>
           </Properties>
         </Component>
       </SubComponents>
